# song

./: build.gradle  settings.gradle
app/: build.gradle
app/debug/: app-debug.apk
app/release/: app-release.apk
app/src/androidTest/java/com/kaon/song/: ExampleInstrumentedTest.java
app/src/curl/armeabi-v7a/include/: Makefile
app/src/curl/armeabi-v7a/include/curl/: Makefile
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/kaon/song/: IUspContorllerCallback.aidl  IUspContorllerInterface.aidl
app/src/main/cpp/: CMakeLists.txt  factory_reset_example.txt  native-lib.c
app/src/main/cpp/src/core/: coap_server.c  common_defs.h  device_bulkdata.c  device_local_agent.c  device_security.c  device_stomp.c  main.c  nu_ipaddr.c  nu_ipaddr.h  nu_macaddr.c  os_utils.c  retry_wait.c  stomp.c  usp_cli.c  usp_cli.h  usp_err.c  usp_log.c  usp_log.h  usp_mem.c
app/src/main/cpp/src/protobuf-c/: protobuf-c.c
app/src/main/java/com/kaon/song/: MainActivity.java  UspReceiver.java  UspService.java
app/src/test/java/com/kaon/song/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
